feat: perks are now displayed using oraxen under format perks_<PerkType.id>